--- a/ImageResizeWebApp/ImageResizeWebApp/Views/Home/Index.cshtml
+++ b/ImageResizeWebApp/ImageResizeWebApp/Views/Home/Index.cshtml
@@ -167,6 +167,8 @@
             myDropzone = this;
             myDropzone.on("success", function(file, response) {
                 console.log("Success");
+                console.log("Response from server: ");
+                console.table(response);
                 myDropzone.removeFile(file);
             });                    
         }
